--- a/MyerSplash/project.json
+++ b/MyerSplash/project.json
@@ -8,6 +8,7 @@
     "Microsoft.ApplicationInsights.WindowsApps": "1.1.1",
     "Microsoft.NETCore.UniversalWindowsPlatform": "6.0.8",
     "Microsoft.Toolkit.Uwp.Notifications": "2.2.0",
+    "Microsoft.Toolkit.Uwp.UI.Controls": "3.0.0",
     "Microsoft.Xaml.Behaviors.Uwp.Managed": "2.0.0",
     "MvvmLight": "5.3.0",
     "Newtonsoft.Json": "11.0.1",
