--- a/MyerSplashShared/MyerSplashShared.csproj
+++ b/MyerSplashShared/MyerSplashShared.csproj
@@ -108,6 +108,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="API\APIException.cs" />
+    <Compile Include="Data\DiagnosisItem.cs" />
     <Compile Include="Data\UnsplashLinks.cs" />
     <Compile Include="Service\CloudService.cs" />
     <Compile Include="API\CTSFactory.cs" />
