Make network diagnosis more specified

--- a/MyerSplashShared/MyerSplashShared.csproj
+++ b/MyerSplashShared/MyerSplashShared.csproj
@@ -107,6 +107,7 @@
     <Compile Include="API\APIException.cs" />
     <Compile Include="Data\CancellationTokeSourceFactory.cs" />
     <Compile Include="Data\DiagnosisItem.cs" />
+    <Compile Include="Data\DiagnosisResult.cs" />
     <Compile Include="Data\UnsplashLinks.cs" />
     <Compile Include="Service\CloudService.cs" />
     <Compile Include="API\Request.cs" />
