--- a/MyerSplash/MyerSplash.csproj
+++ b/MyerSplash/MyerSplash.csproj
@@ -130,6 +130,7 @@
     <Compile Include="Common\Constant.cs" />
     <Compile Include="Common\DownloadStatus.cs" />
     <Compile Include="Common\Composition\CompositionExtensions.cs" />
+    <Compile Include="Common\Events.cs" />
     <Compile Include="Common\GlobalLocaleHelper.cs" />
     <Compile Include="Common\JumpListHelper.cs" />
     <Compile Include="Common\MessengerTokens.cs" />
