--- a/MyerSplashShared/MyerSplashShared.csproj
+++ b/MyerSplashShared/MyerSplashShared.csproj
@@ -109,6 +109,7 @@
     <Compile Include="Data\DiagnosisItem.cs" />
     <Compile Include="Data\DiagnosisResult.cs" />
     <Compile Include="Data\UnsplashLinks.cs" />
+    <Compile Include="Events.cs" />
     <Compile Include="Service\CloudService.cs" />
     <Compile Include="API\Request.cs" />
     <Compile Include="Service\HighlightImageService.cs" />
@@ -141,6 +142,9 @@
   <ItemGroup>
     <PackageReference Include="JP.Utils.UWP">
       <Version>1.3.0</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.AppCenter.Analytics">
+      <Version>1.14.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.8</Version>
