--- a/MyerSplash/MyerSplash.csproj
+++ b/MyerSplash/MyerSplash.csproj
@@ -413,6 +413,9 @@
     <PackageReference Include="Microsoft.AppCenter.Analytics">
       <Version>1.14.0</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.AppCenter.Push">
+      <Version>1.14.0</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.ApplicationInsights">
       <Version>2.9.1</Version>
     </PackageReference>
